--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  color: var(--title-text-color);
 }
 .team-member-position {
   font-size: 16px;
