--- a/css/styles.css
+++ b/css/styles.css
@@ -25,11 +25,11 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.15;
-  color: var(--logo-primary-color);
+  color: var(--accent-color);
   text-decoration: none;
 }
 .studio-logo-part {
-  color: var(--accent-color);
+  color: var(--logo-primary-color);
 }
 
 /*навигация по сайту*/
@@ -37,7 +37,6 @@ body {
   font-weight: 500;
   line-height: 1.15;
   letter-spacing: 0.02em;
-  color: var(--title-text-color);
   text-decoration: none;
 }
 .nav-link:hover,
@@ -50,8 +49,8 @@ body {
   font-weight: 500;
   line-height: 1.15;
   letter-spacing: 0.02em;
-  color: var(--title-text-color);
   text-decoration: none;
+  color: var(--primary-text-color);
 }
 
 .contacts-link:hover,
@@ -78,6 +77,7 @@ body {
   line-height: 1.15;
   color: var(--light-address-color);
   text-decoration: none;
+  font-style: normal;
 }
 
 .light-contacts-link:hover,
@@ -87,7 +87,8 @@ body {
 .office-address {
   font-weight: 400;
   line-height: 1.7;
-  color: var(--light-address-color);
+  color: var(--main-white-color);
+  font-style: normal;
 }
 .footer-container {
   background-color: var(--dark-accent-color);
@@ -99,7 +100,7 @@ body {
   line-height: 1.4;
   letter-spacing: 0.06em;
   text-align: center;
-
+  text-transform: uppercase;
   color: var(--main-white-color);
 }
 .hero-container {
@@ -123,6 +124,11 @@ body {
 .advantage-header {
   line-height: 1.14;
   color: var(--title-text-color);
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  font-weight: 700;
 }
 .advantage-text {
   line-height: 1.7;
